--- a/src/assets/Transaction.css
+++ b/src/assets/Transaction.css
@@ -129,3 +129,7 @@
 .account-switch:hover {
   filter: drop-shadow(0px 1px 1px hsl(0, 0%, 0%, 0.25)) brightness(1.2);
 }
+
+.edit {
+  cursor: pointer;
+}
