--- a/src/index.css
+++ b/src/index.css
@@ -447,12 +447,17 @@ table * {
 }
 
 .user-page,
-.admin-page,
-.users-page {
+.admin-page {
   display: grid;
   grid-template-columns: 0.75fr 1fr;
   grid-template-rows: auto repeat(2, 1fr);
   gap: 2rem;
+}
+.users-page {
+  display: grid;
+  grid-template-columns: 0.75fr 1fr;
+  grid-template-rows: auto auto 1fr;
+  gap: 3rem;
 }
 
 @media (max-width: 1000px) {
@@ -481,10 +486,10 @@ table * {
   grid-area: 2 / 1 / 3 / 2;
 }
 .users-page .account-details {
-  grid-area: 3 / 1 / 4 / 2;
+  grid-area: 2 / 2 / 3 / 3;
 }
 .users-page .transactions {
-  grid-area: 2 / 2 / -1 / -1;
+  grid-area: 3 / 1 / -1 / -1;
 }
 
 .users-page .users-list1,
@@ -502,8 +507,10 @@ table * {
   background-color: white;
   box-shadow: 0px 2px 4px hsl(0, 0%, 0%, 0.25);
   border-radius: 5px;
-  max-height: 160px;
+  max-height: 200px;
   overflow-y: auto;
+
+  margin: auto;
 }
 
 .users-page .users-list1::-webkit-scrollbar {
