--- a/src/index.css
+++ b/src/index.css
@@ -468,6 +468,7 @@ table * {
 .users-page .users-list1,
 .users-page .users-list1 > * {
   width: 100%;
+  margin-block-end: auto;
 }
 
 .users-page .users-list1 * {
@@ -477,11 +478,20 @@ table * {
 }
 
 .users-page .users-list1 {
+  position: relative;
+
   background-color: white;
   box-shadow: 0px 2px 4px hsl(0, 0%, 0%, 0.25);
   border-radius: 5px;
   max-height: 200px;
   overflow-y: auto;
+}
+
+.users-page .users-list1 thead {
+  background-color: hsl(110, 50%, 85%, 1);
+
+  position: sticky;
+  top: 0;
 }
 
 .users-page .users-list1::-webkit-scrollbar {
@@ -1051,7 +1061,7 @@ table * {
   display: grid;
   grid-template-columns: 0.75fr 1fr;
   grid-template-rows: auto auto 1fr;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .user-page {
