feat: added confirmation modal to log out, fixed epenses icon style and tooltip on sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -441,6 +441,9 @@ table * {
 .main-nav ul li:has(.fa-money-bill-transfer)::before {
   content: "Transfer";
 }
+.main-nav ul li:has(.fa-wallet)::before {
+  content: "Expenses";
+}
 .main-nav button:has(.fa-right-from-bracket)::before {
   content: "Logout";
 }
@@ -1115,4 +1118,41 @@ table * {
 }
 .users-page .transactions {
   grid-area: 3 / 1 / -1 / -1;
+}
+
+/* modal */
+
+.modal-container {
+  position: fixed;
+  inset: 0;
+  z-index: 99;
+  background-color: hsl(0, 0%, 0%, 0.6);
+
+  display: grid;
+  place-items: center;
+}
+
+.modal-dialog {
+  min-height: 100px;
+
+  background-color: white;
+  padding: 2rem;
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  gap: 2rem;
+
+  text-align: center;
+}
+
+.modal-dialog .buttons {
+  margin-block-start: auto;
+
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
