--- a/src/index.css
+++ b/src/index.css
@@ -948,6 +948,8 @@ table * {
   gap: 0.5rem;
 
   margin-inline-end: auto;
+
+  min-width: 400px;
 }
 
 .admin-dash .dash-overview {
@@ -1155,4 +1157,114 @@ table * {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+}
+
+/* transfers page */
+
+.transfers-page {
+  width: 100%;
+
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2rem;
+}
+
+.transfers-page > * {
+  flex-grow: 1;
+  flex-shrink: 0;
+  width: min(350px, 90%);
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  gap: 0.5rem;
+}
+.transfers-page h1,
+.transfers-page .transfer-buttons label {
+  text-align: center;
+  margin: 1rem;
+
+  color: var(--primary-green-800);
+  font-weight: 800;
+  font-size: 1.2rem;
+}
+.transfers-page .transfer-buttons label {
+  margin-block-end: 0rem;
+}
+.source-acc,
+.target-acc {
+  min-height: 200px;
+}
+
+.source-acc select,
+.target-acc select {
+  width: 100%;
+  max-width: none !important;
+  margin-inline: auto;
+}
+
+.acc-details {
+  padding: 2rem 4rem 2rem 2rem;
+
+  border-radius: 5px;
+  background-color: white;
+}
+
+.acc-details p {
+  border-block-end: 1px solid hsl(0, 0%, 0%, 0.1);
+  margin-block-end: 0.5rem;
+
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 1rem;
+
+  font-weight: 600;
+}
+.acc-details p::before {
+  width: 90px;
+  text-transform: capitalize;
+  display: inline;
+  font-weight: 600;
+  color: hsl(0, 0%, 0%, 0.25);
+}
+.acc-details p.email::before {
+  content: "email: ";
+}
+.acc-details p.balance::before {
+  content: "balance (₱): ";
+}
+
+.transfers-page .divider {
+  flex-grow: 0;
+  width: 1px;
+  min-height: 100px;
+  max-height: 100%;
+  align-self: center;
+  background-color: hsl(0, 0%, 0%, 0.05);
+
+  border-radius: 100%;
+
+  display: none;
+}
+.transfer-buttons {
+  width: min(700px, 90%);
+  flex-grow: 3;
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+
+  border: 0;
+}
+
+.transfer-buttons > input {
+  padding: 1rem;
+  border-radius: 5px;
+
+  width: min(500px, 90%);
 }
