feat: add recipient

--- a/src/index.css
+++ b/src/index.css
@@ -444,6 +444,9 @@ table * {
 .main-nav ul li:has(.fa-wallet)::before {
   content: "Expenses";
 }
+.main-nav ul li:has(.fa-user-group)::before {
+  content: "Recipient";
+}
 .main-nav button:has(.fa-right-from-bracket)::before {
   content: "Logout";
 }
@@ -576,7 +579,7 @@ table * {
   display: none;
 }
 [data-role="admin"]
-  li:is(:has(a[href="/expenses"]), :has([href="/users"])) {
+  li:is(:has(a[href="/expenses"]), :has([href="/users"]),:has([href="/recipients"])) {
   display: none;
 }
 .green-button.view-more {
