feat: added form validation and toasts, show users page to admin

--- a/src/index.css
+++ b/src/index.css
@@ -580,7 +580,7 @@ table * {
 }
 
 [data-role="admin"]
-  li:is(:has(a[href="/expenses"]), :has([href="/users"]),:has([href="/recipients"])) {
+  li:is(:has(a[href="/expenses"]),:has([href="/recipients"])) {
 
   display: none;
 }
